<resources>
    <string name="app_name">MOODLE+</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="checkbox_text">Remember Username</string>
    <string name="hyperlink">
        <a href="http://www.cc.iitd.ernet.in/CSC/index.php?option=com_content&amp;view=article&amp;id=114&amp;Itemid=156">
            Forgot your username or password?
        </a>
    </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string-array name="usernames">
        <item>cs1110200</item>
        <item>cs5110281</item>
        <item>cs5110271</item>
        <item>cs5110300</item>
        <item>vinay</item>
        <item>scgupta</item>
        <item>subodh</item>
    </string-array>
    <string name="title_activity_home_page">Moodle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_settings">Settings</string>
    <string name="grade">Grades</string>

</resources>
